--- a/package.json
+++ b/package.json
@@ -1,23 +1,45 @@
 {
   "name": "pdf-efax",
   "version": "0.1.0",
+  "author": "YS",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "generate-v8-snapshots": "node ./tools/create-v8-snapshots.js",
+    "copy-v8-snapshots": "node tools/copy-snapshot-bin-to-electron.js",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
+    "@hapi/hawk": "^8.0.0",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "electron-link": "^0.6.0",
+    "electron-mksnapshot": "^11.0.0",
+    "electron-store": "^7.0.1",
+    "loader-utils": "^2.0.0",
+    "nodemailer": "^6.4.17",
+    "vue": "^2.6.12",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "electron": "^11.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
