--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "electron-store": "^7.0.1",
     "loader-utils": "^2.0.0",
     "nodemailer": "^6.4.17",
+    "regedit": "^3.0.3",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
